<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Search_tootBar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@drawable/ic_back">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/sear_context"
            android:imeOptions="actionSend"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </androidx.appcompat.widget.Toolbar>
    <!--当搜索内容不为空时当前布局隐藏掉-->
    <LinearLayout
        android:id="@+id/is_show_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <TextView
                style="@style/SearchTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_is_hot" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hot_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:overScrollMode="never" />
        </LinearLayout>
        <!--热门搜索-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/SearchTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_is_history" />

                <TextView
                    android:id="@+id/clear_record_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/clear_record"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/sp_12" />
            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecordRecy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:overScrollMode="never" />
        </LinearLayout>
    </LinearLayout>
    <!--用于显示搜索内容-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/show_search_rcl"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>